Nuevo environment ejercicio

--- a/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-1-1.tex
@@ -1,7 +1,6 @@
-\ejExtra
-Probar la propiedad distributiva: $X \inter (Y \union Z) = (X \inter Y) \union (X \inter Z)$\\
-
-\separadorCorto
+\begin{enunciado}{\ejExtra}
+Probar la propiedad distributiva: $X \inter (Y \union Z) = (X \inter Y) \union (X \inter Z)$
+\end{enunciado}
 
 Tengo que hacer una doble inclusión:
 $\to \begin{cases}
