--- a/1-guia/ejercicios-1-extra/ej-extra-2-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-2-1.tex
@@ -1,8 +1,6 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
 Probar la propiedad $(A \inter B)^c = A^c \union B^c$.
-
-
-\separadorCorto
+\end{enunciado}
 
 Tengo que hacer una doble inclusión
 $\to \begin{cases}
