--- a/1-guia/ejercicios-1-extra/ej-extra-3-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-3-1.tex
@@ -1,23 +1,19 @@
-\ejExtra
+\begin{enunciado}{\ejExtra}
+  Sea
+  $$ \F = \set{h : \set{1,2,3,4} \to \set{1,2,\dots, 50} \ /\  h \text{ es inyectiva}} $$.
+  Definimos en $\F$ la relación $\relacion$ como
+  $$
+    f \relacion g \quad \text{si y sólo si} \quad \# \parentesis{ \im(f) \diferencia \im(g) } = 0 \otext 4.
+  $$
+  \begin{enumerate}[label=\alph*)]
+    \item Analizar si $\relacion$ es una relación reflexiva, simétrica, antisimétrica y/o transitiva.
 
-Sea
-$
-  \F = \set{h : \set{1,2,3,4} \to \set{1,2,\dots, 50} \ /\  h \text{ es inyectiva}}
-$.\\
-Definimos en $\F$ la relación $\relacion$ como
-$$
-  f \relacion g \quad \text{si y sólo si} \quad \# \parentesis{ \im(f) \diferencia \im(g) } = 0 \otext 4.
-$$
-\begin{enumerate}[label=\alph*)]
-  \item Analizar si $\relacion$ es una relación reflexiva, simétrica, antisimétrica y/o transitiva.
-
-  \item Sea
-        $f \en \F$
-        definida como $f(x) = x$ para $1 \leq x \leq 4$. Calcular cuántas funciones $g \en \F$
-        satisfacen $f \relacion g$
-\end{enumerate}
-
-\separadorCorto
+    \item Sea
+          $f \en \F$
+          definida como $f(x) = x$ para $1 \leq x \leq 4$. Calcular cuántas funciones $g \en \F$
+          satisfacen $f \relacion g$
+  \end{enumerate}
+\end{enunciado}
 
 Observar que $f \en \F$ es una función que tiene un dominio con solo 4 elementos, es decir
 $$
