--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -1,25 +1,25 @@
-\ejercicio
-Dado el conjunto $A = \set{1,2,3}$, determinar cuáles de las siguientes afirmaciones son verdaderas
+\begin{enunciado}{\ejercicio}
+  Dado el conjunto $A = \set{1,2,3}$, determinar cuáles de las siguientes afirmaciones son verdaderas
 
-\begin{multicols}{5}
-	\begin{enumerate}[label=(\roman*)]
-		\item $1 \en A $
-		\item $\set{1} \subseteq A $
-		\item $\set{2,1} \subseteq A $
-		\item $\set{1,3} \en A $
-		\item $\set{2} \en A $
-	\end{enumerate}
-\end{multicols}
+  \begin{multicols}{5}
+    \begin{enumerate}[label=(\roman*)]
+      \item $1 \en A $
+      \item $\set{1} \subseteq A $
+      \item $\set{2,1} \subseteq A $
+      \item $\set{1,3} \en A $
+      \item $\set{2} \en A $
+    \end{enumerate}
+  \end{multicols}
 
-\separadorCorto
+\end{enunciado}
 
 $A = \set{1,2,3}$
-\begin{multicols}{2}
-	\begin{enumerate}[label=(\roman*)]
-		\item $1 \en A \flecha{respueta} \text{V}$
-		\item $\set{1} \subseteq A \flecha{respueta} \text{V}$
-		\item $\set{2,1} \subseteq A \flecha{respuesta} \text{V}$
-		\item $\set{1,3} \en A \flecha{respuesta} \text{F}$
-		\item $\set{2} \en A \flecha{respuesta} \text{F}$
-	\end{enumerate}
+\begin{multicols}{3}
+  \begin{enumerate}[label=(\roman*)]
+    \item $1 \en A \flecha{respueta} \text{V}$
+    \item $\set{1} \subseteq A \flecha{respueta} \text{V}$
+    \item $\set{2,1} \subseteq A \flecha{respuesta} \text{V}$
+    \item $\set{1,3} \en A \flecha{respuesta} \text{F}$
+    \item $\set{2} \en A \flecha{respuesta} \text{F}$
+  \end{enumerate}
 \end{multicols}
