--- a/1-guia/ejercicios-1/ej-11-1.tex
+++ b/1-guia/ejercicios-1/ej-11-1.tex
@@ -1,7 +1,8 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
+
 Hallar contraejemplos para mostrar que las siguientes proposiciones son falsas:
 
-\separadorCorto
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
 	\item $\paratodo a \en \naturales,\, \frac{a-1}{a}$ no es un número entero.\\
