--- a/1-guia/ejercicios-1/ej-2-1.tex
+++ b/1-guia/ejercicios-1/ej-2-1.tex
@@ -1,42 +1,40 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 
-Dado el conjunto $A = \set{1,2,\set{3},\set{1,2}}$,
-determinar cuáles de las siguientes afirmaciones son verdaderas:\\
+  Dado el conjunto $A = \set{1,2,\set{3},\set{1,2}}$,
+  determinar cuáles de las siguientes afirmaciones son verdaderas:\par
 
-\separadorCorto
+  \begin{multicols}{4}
+    \begin{enumerate}[label=(\roman*)]
+      \item $3 \en A         $
+      \item $\set{3} \subseteq A $
+      \item $\set{3} \en A    $
+      \item $\set{\set{3}} \en A $
+      \item $\set{1,2} \en A $
+      \item $\set{1,2} \subseteq A  $
+      \item $\set{\set{1,2}} \subseteq A  $
+      \item $\set{\set{1,2}, 3} \subseteq A  $
+      \item $\vacio \en A  $
+      \item $\vacio \subseteq A  $
+      \item $A \en A  $
+      \item $A \subseteq A  $
+    \end{enumerate}
+  \end{multicols}
 
-\begin{multicols}{2}
-	\begin{enumerate}[label=(\roman*)]
-		\item $3 \en A         $
-		\item $\set{3} \subseteq A $
-		\item $\set{3} \en A    $
-		\item $\set{\set{3}} \en A $
-		\item $\set{1,2} \en A $
-		\item $\set{1,2} \subseteq A  $
-		\item $\set{\set{1,2}} \subseteq A  $
-		\item $\set{\set{1,2}, 3} \subseteq A  $
-		\item $\vacio \en A  $
-		\item $\vacio \subseteq A  $
-		\item $A \en A  $
-		\item $A \subseteq A  $
-	\end{enumerate}
-\end{multicols}
+\end{enunciado}
 
-\separadorCorto
-
-\begin{multicols}{2}
-	\begin{enumerate}[label=(\roman*)]
-		\item $3 \en A       \flecha{respueta} \text{F}  $
-		\item $\set{3} \subseteq A \flecha{respueta} \text{F}$
-		\item $\set{3} \en A    \flecha{respueta} \text{V}$
-		\item $\set{\set{3}} \en A \flecha{respueta} \text{V}$
-		\item $\set{1,2} \en A \flecha{respueta} \text{V}$
-		\item $\set{1,2} \subseteq A \flecha{respueta} \text{V} $
-		\item $\set{\set{1,2}} \subseteq A \flecha{respueta} \text{V} $
-		\item $\set{\set{1,2}, 3} \subseteq A \flecha{respueta} \text{F} $
-		\item $\vacio \en A \flecha{respueta} \text{F} $
-		\item $\vacio \subseteq A \flecha{respueta} \text{V} $
-		\item $A \en A \flecha{respueta} \text{F} $
-		\item $A \subseteq A \flecha{respueta} \text{V} $
-	\end{enumerate}
+\begin{multicols}{4}
+        \begin{enumerate}[label=(\roman*)]
+    \item $3 \en A       \to F  $
+    \item $\set{3} \subseteq A \to F$
+    \item $\set{3} \en A    \to V$
+    \item $\set{\set{3}} \en A \to V$
+    \item $\set{1,2} \en A \to V$
+    \item $\set{1,2} \subseteq A \to V $
+    \item $\set{\set{1,2}} \subseteq A \to V $
+    \item ${\set{\set{1,2}, 3} \subseteq A \to F}$
+    \item $\vacio \en A \to F $
+    \item $\vacio \subseteq A \to V $
+    \item $A \en A \to F $
+    \item $A \subseteq A \to V $
+  \end{enumerate}
 \end{multicols}
