--- a/1-guia/ejercicios-1/ej-23-1.tex
+++ b/1-guia/ejercicios-1/ej-23-1.tex
@@ -1,10 +1,17 @@
-\ejercicio
-Sea $A$ un conjunto. Describir todas las relaciones en $A$ que son a la vez
-\begin{multicols}{2}
-	\begin{enumerate}[label=\roman*)]
-		\item simétricas y antisimétricas\\ \red{elementos en bucles sueltos?}
-		\item de equivalencia y de orden\\ \red{Idem anterior}
-	\end{enumerate}
-\end{multicols}
+\begin{enunciado}{\ejercicio}
 
+  Sea $A$ un conjunto. Describir todas las relaciones en $A$ que son a la vez
+  \begin{multicols}{2}
+    \begin{enumerate}[label=\roman*)]
+      \item simétricas y antisimétricas\\ \red{elementos en bucles sueltos?}
+      \item de equivalencia y de orden\\ \red{Idem anterior}
+    \end{enumerate}
+  \end{multicols}
+
+\end{enunciado}
+
+\begin{enumerate}[label=\roman*)]
+  \item simétricas y antisimétricas\\ \red{elementos en bucles sueltos?}
+  \item de equivalencia y de orden\\ \red{Idem anterior}
+\end{enumerate}
 ¿Puede una relación en $A$ no ser ni simétrica ni antisimétrica? \red{22 (vi)?}\\
