--- a/1-guia/ejercicios-1/ej-25-1.tex
+++ b/1-guia/ejercicios-1/ej-25-1.tex
@@ -1,5 +1,9 @@
-\ejercicio
-\Hacer
-Sea $A = \set{1,2,3,4,5,6,7,8,9,10}$. Hallar y graficar la relación de equivalencia en $A$ asociada a la partición $\set{ \set{1,3}, \set{2,6,7}, \set{4,8,9,10}, \set{5} }$.
-¿Cuántas clases de equivalencia distintas tiene? Hallar un representante para cada clase.
+\begin{enunciado}{\ejercicio}
+  Sea $A = \set{1,2,3,4,5,6,7,8,9,10}$.
+  Hallar y graficar la relación de equivalencia en $A$ asociada a la partición
+  $\set{ \set{1,3}, \set{2,6,7}, \set{4,8,9,10}, \set{5} }$.
+  ¿Cuántas clases de equivalencia distintas tiene? Hallar un representante para cada clase.
+\end{enunciado}
+
+\hacer
 
