--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -1,12 +1,15 @@
-\ejercicio
-\Hacer
-Sean $P = \partes(\set{1,2,3,4,5,6,7,8,9,10})$ el conjunto de partes de $\set{1,\dots, 10}$ y $\relacion$ la relación en $P$ definida por:
-\[
-	A \relacion B \sisolosi (A \triangle B) \sisolosi \inter \set{1,2,3} = \vacio
-\]
-\begin{enumerate}[label=\roman*)]
-	\item  Probar que $\relacion$ es una relación de equivalencia y decidir si es antisimétrica (\textit{\underline{Sugerencia:}} usar adecuadamente el ejercicio \textbf{14iii})).
-	\item Hallar la clase de equivalencia de $A = \set{1,2,3}$.
-\end{enumerate}
+\begin{enunciado}{\ejercicio}
+  Sean $P = \partes(\set{1,2,3,4,5,6,7,8,9,10})$
+  el conjunto de partes de $\set{1,\dots, 10}$ y $\relacion$ la relación en $P$ definida por:
+  $$
+    A \relacion B \sisolosi (A \triangle B) \sisolosi \inter \set{1,2,3} = \vacio
+  $$
+  \begin{enumerate}[label=\roman*)]
+    \item  Probar que $\relacion$ es una relación de equivalencia y decidir si es antisimétrica
+            (\textit{\underline{Sugerencia:}} usar adecuadamente el ejercicio \textbf{14iii})).
+    \item Hallar la clase de equivalencia de $A = \set{1,2,3}$.
+  \end{enumerate}
 
-\separadorCorto
+\end{enunciado}
+
+\hacer
