--- a/1-guia/ejercicios-1/ej-27-1.tex
+++ b/1-guia/ejercicios-1/ej-27-1.tex
@@ -52,7 +52,7 @@
 	\end{tikzpicture}
 }
 
-\ejercicio
+\begin{enunciado}{\ejercicio}
 
 Sean $A = \set{n \en \naturales \talque n \leq 92}$ y
 $\relacion$ la relación en $A$ definida por
@@ -62,7 +62,7 @@ $x \relacion y \sisolosi x^2 - y^2 = 93x - 93y$
 	\item Hallar la clase de equivalencia de cada $x \en A$. Deducir cuántas clases de equivalencia \textbf{distintas} determina la relación $\relacion$
 \end{enumerate}
 
-\separadorCorto
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
 	\item Primero acomodo la condición de la relación:\\
