--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -1,11 +1,13 @@
-\ejercicio
-Subconjuntos: $A = \set{1, -2, 7, 3}$, $B = \set{1, \set{3}, 10}$, $C = \set{-2,\set{1,2,3},3}$,\\
-Conjunto referencial: $V = \set{1,\set{3}, -2,7, 10, \set{1,2,3},3}$, hallar:
+\begin{enunciado}{\ejercicio}
+Dados los subconjuntos: $A = \set{1, -2, 7, 3}$, $B = \set{1, \set{3}, 10}$ y $C = \set{-2,\set{1,2,3},3}$
+del conjunto referencial: $V = \set{1,\set{3}, -2,7, 10, \set{1,2,3},3}$, hallar
 
-\begin{multicols}{2}
+\begin{multicols}{3}
 	\begin{enumerate}[label=(\roman*)]
 		\item $A \inter (B \triangle C)$
 		\item $(A \inter B) \triangle (A \inter C)$
 		\item $A^c \inter B^c \inter C^c$
 	\end{enumerate}
 \end{multicols}
+\end{enunciado}
+\hacer
