--- a/1-guia/ejercicios-1/ej-5-1.tex
+++ b/1-guia/ejercicios-1/ej-5-1.tex
@@ -1,14 +1,9 @@
-\ejercicio
-Describir
-$
-	\begin{cases}
-		i) \quad (A \union B \union C)^c  & \text{en términos de intersecciones y complementos} \\
-		ii) \quad (A \inter B \inter C)^c & \text{en términos de uniones y complementos}        \\
-	\end{cases}
-$
+\begin{enunciado}{\ejercicio}
+        Dados los subconjuntos $A,B,C$ de un conjunto referencial $V$, describir $(A \union B \union C)^c$ en términos
+        de intersecciones y complementos, y $(A \inter B \inter C)^c$ en términos de uniones y complementos
+\end{enunciado}
+
 \begin{enumerate}[label=\roman*)]
-	\item $\quad (A \union B \union C)^c \igual{(c)} (A \union B)^c \inter C^c \igual{(c)} A^c \inter B^c \inter C^c$
-	\item $\quad (A \inter B \inter C)^c \igual{(d)} (A \inter B)^c \union C^c \igual{(d)} A^c \union B^c \union C^c$
+	\item $\quad (A \union B \union C)^c \igual{(c)} (A \union B)^c \inter C^c \igual{(c)} A^c \inter B^c \inter C^c$\Tilde
+	\item $\quad (A \inter B \inter C)^c \igual{(d)} (A \inter B)^c \union C^c \igual{(d)} A^c \union B^c \union C^c$\Tilde
 \end{enumerate}
-\red{Solo eso? Falta demostrar algo de alguna manera más rigurosa?}\\
-\blue{No, con eso sería suficiente \Tilde}
