--- a/1-guia/ejercicios-1/ej-8-1.tex
+++ b/1-guia/ejercicios-1/ej-8-1.tex
@@ -1,5 +1,15 @@
-\ejercicio
-Hallar $\partes(A)$, el conjunto partes formado por todos los subconjuntos de A.\\
+\begin{enunciado}{\ejercicio}
+  Hallar el conjunto $\partes(A)$ de partes de $A$ en los casos.
+  \begin{multicols}{3}
+    \begin{enumerate}[label=\roman*)]
+      \item $A = \set{1}$
+      \item $A = \set{a,b}$
+      \item $A = \set{1,\set{1,2},3}$
+    \end{enumerate}
+  \end{multicols}
+\end{enunciado}
+
+  Recordando que:\par
 $
   \partes(A) \to
   \begin{cases}
