--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -28,6 +28,8 @@
 \usepackage{polynom} % para división de polinomios y mcd
 \usepackage{fontawesome5} % fuentes "extras"
 \usepackage{venndiagram} % Para los diagramas de Venn
+\usepackage{listings} % Escribir código
+
 
 \usepackage{fancyhdr} % Encabezados y pie de páginas
 % \usepackage{lipsum} % dummy text
