--- a/1-guia/ejercicios-1/ej-17-1.tex
+++ b/1-guia/ejercicios-1/ej-17-1.tex
@@ -34,11 +34,24 @@
 }
 
 
+\separador
+\underline{\textit{Relaciones}}
+Definición de Relación, $\relacion$:
+\begin{center}
+  \fbox{
+    \parbox{.9\textwidth}{
+      Sean $A$ y $B$ conjuntos. Una \textit{relación $\relacion$ de $A$ en $B$}
+      es un subconjunto cualquiera $\relacion$ del producto cartesiano $A \times B$. Es decir $\relacion$
+      de $A$ en $B$ si $\relacion \en \partes(A \times B)$.
+    }
+  }
+\end{center}
 
-\ejercicio
-Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Verificar las siguientes
-relaciones de $A$ y $B$ y en caso afirmativo graficarlas por medio de un diagrama
-con flechas de $A$ en $B$ y por medio de puntos en el producto cartesiano $A \times B$.
+\begin{enunciado}{\ejercicio}
+  Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Verificar las siguientes
+  relaciones de $A$ y $B$ y en caso afirmativo graficarlas por medio de un diagrama
+  con flechas de $A$ en $B$ y por medio de puntos en el producto cartesiano $A \times B$.
+\end{enunciado}
 
 \begin{multicols}{2}
   \begin{enumerate}[label=\roman*)]
