--- a/1-guia/ejercicios-1/ej-18-1.tex
+++ b/1-guia/ejercicios-1/ej-18-1.tex
@@ -1,12 +1,26 @@
-\ejercicio Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Describir por extensión cada una de las
-siguientes relaciones de $A$ en $B$:
+\begin{enunciado}{\ejercicio}
+  Sean $A = \set{1, 2, 3}$ y $B = \set{1, 3, 5, 7}$. Describir por extensión cada una de las
+  siguientes relaciones de $A$ en $B$:
+
+  \begin{multicols}{2}
+    \begin{enumerate}[label=\roman*)]
+      \item $(a,b) \en \relacion \sisolosi a \leq b $
+
+      \item $(a,b) \en \relacion \sisolosi a > b$
+
+      \item $(a,b) \en \relacion \sisolosi a \cdot b$ es par
+
+      \item $(a,b) \en \relacion \sisolosi a + b > 6$
+    \end{enumerate}
+  \end{multicols}
+\end{enunciado}
+
 \begin{enumerate}[label=\roman*)]
-	\item $(a,b) \en \relacion \sisolosi a\leq b =\\
-		      \set{(1,1), (1,3), (1,5), (1,7), (2,3), (2,5), (2,7), (3,3), (3,5), (3,7)}$
+  \item $(a,b) \en \relacion \sisolosi a\leq b \to   (a,b) \en \relacion \sii   \set{(1,1), (1,3), (1,5), (1,7), (2,3), (2,5), (2,7), (3,3), (3,5), (3,7)}$
 
-	\item $(a,b) \en \relacion \sisolosi a > b = \set{(2,1), (3, 1)}$
+  \item $(a,b) \en \relacion \sisolosi a > b \to     (a,b) \en \relacion \sii   \set{(2,1), (3, 1)}$
 
-	\item $(a,b) \en \relacion \sisolosi a \cdot b = \set{(2,1), (2,3), (2,5), (2,7)}$
+  \item $(a,b) \en \relacion \sisolosi a \cdot b \to (a,b) \en \relacion \sii    \set{(2,1), (2,3), (2,5), (2,7)}$
 
-	\item $(a,b) \en \relacion \sisolosi a + b > 6 = \set{(1,7), (2,5), (2, 7), (3, 5), (3, 7)}$
+  \item $(a,b) \en \relacion \sisolosi a + b > 6 \to (a,b) \en \relacion \sii\set{(1,7), (2,5), (2, 7), (3, 5), (3, 7)}$
 \end{enumerate}
