--- a/1-guia/ejercicios-1/ej-22-1.tex
+++ b/1-guia/ejercicios-1/ej-22-1.tex
@@ -1,83 +1,96 @@
-\ejercicio En cada uno de los siguientes casos determinar si la relación $\relacion $ en $A$ es reflexiva, simétrica,
-antisimétrica, transitiva, de equivalencia o de orden.
+\begin{enunciado}{\ejercicio}
+  En cada uno de los siguientes casos determinar si la relación $\relacion $ en $A$ es reflexiva, simétrica,
+  antisimétrica, transitiva, de equivalencia o de orden.
+  \begin{enumerate}[label=\roman*)]
+    \item  $A = \set{1,2,3,4,5}, \relacion = {(1,1), (2,2), (3,3), (4,4), (5,5), (1,2), (1,3), (2,5), (1,5)}$\\
+    \item 
+
+    \item 
+    \item 
+    \item 
+    \item $A = \partes(\set{n \en \naturales \talque n \leq 30})$, $\relacion$ definida por $X \relacion Y \sisolosi 2 \notin X \inter Y^c$\\
+    \item $A = \naturales \times \naturales,\, \relacion$ definida por $(a,b) \relacion (c,d) \sisolosi bc$ es múltiplo de $ad$.
+  \end{enumerate}
+
+\end{enunciado}
 
 \begin{enumerate}
-	\item \textit{Relación de equivalencia}: La relación debe ser reflexiva, simétrica y transitiva.
-	\item \textit{Relación de orden}: La relación debe ser reflexiva, antisimétrica y transitiva.
+  \item \textit{Relación de equivalencia}: La relación debe ser reflexiva, simétrica y transitiva.
+  \item \textit{Relación de orden}: La relación debe ser reflexiva, antisimétrica y transitiva.
 \end{enumerate}
 
 \begin{enumerate}[label=\roman*)]
-	\item  $A = \set{1,2,3,4,5}, \relacion = {(1,1), (2,2), (3,3), (4,4), (5,5), (1,2), (1,3), (2,5), (1,5)}$\\
-	      \begin{enumerate}
-		      \item[R:] Es reflexiva, porque hay bucles en todos los elementos de $A$.
-		      \item[S:] No es simétrica, dado que existe $(1, 5)$, pero no $(5, 1)$
-		      \item[AS:] Es antisimétrica. No hay ningún par que tenga la vuelta, excepto los casos $x \relacion x$.
-		      \item[T:] Es transitiva. La terna 1, 2, 5 es transitiva.
-	      \end{enumerate}
-	      La relación es R, AS y T, por lo tanto es una \textit{relación de orden}.
+  \item  $A = \set{1,2,3,4,5}, \relacion = {(1,1), (2,2), (3,3), (4,4), (5,5), (1,2), (1,3), (2,5), (1,5)}$\\
+        \begin{enumerate}
+          \item[R:] Es reflexiva, porque hay bucles en todos los elementos de $A$.
+          \item[S:] No es simétrica, dado que existe $(1, 5)$, pero no $(5, 1)$
+          \item[AS:] Es antisimétrica. No hay ningún par que tenga la vuelta, excepto los casos $x \relacion x$.
+          \item[T:] Es transitiva. La terna 1, 2, 5 es transitiva.
+        \end{enumerate}
+        La relación es R, AS y T, por lo tanto es una \textit{relación de orden}.
 
-	\item \hacer
+  \item \hacer
 
-	\item \hacer
-	\item \hacer
-	\item \hacer
-	\item $A = \partes(\set{n \en \naturales \talque n \leq 30})$, $\relacion$ definida por $X \relacion Y \sisolosi 2 \notin X \inter Y^c$\\
-	      $\begin{array}{|c|c|c|c|c|c|}
-			      \hline
-			      2 \en X     & 2 \en Y     & 2 \en Y^c   & 2 \en X^c   & 2 \notin X \inter Y^c & 2 \notin Y \inter X^c \\ \hline  \hline
-			      \magenta{V} & \magenta{V} & \magenta{F} & \magenta{F} & \magenta{V}           & \magenta{V}           \\
-			      \cyan{V}    & \cyan{F}    & \cyan{V}    & \cyan{F}    & \cyan{F}              & \cyan{V}              \\
-			      \cyan{F}    & \cyan{V}    & \cyan{F}    & \cyan{V}    & \cyan{V}              & \cyan{F}              \\
-			      \magenta{F} & \magenta{F} & \magenta{V} & \magenta{V} & \magenta{V}           & \magenta{V}           \\ \hline
-		      \end{array}$.\\
-	      \begin{enumerate}
-		      \item[R:]
-		            La relación es reflexiva ya que para que un elemento $X$ esté relacionado con sí mismo debe ocurrir
-		            que $X \relacion X \sisolosi 2 \notin X \inter X^c$, es decir $2 \notin \vacio$, lo cual es siempre cierto.
+  \item \hacer
+  \item \hacer
+  \item \hacer
+  \item $A = \partes(\set{n \en \naturales \talque n \leq 30})$, $\relacion$ definida por $X \relacion Y \sisolosi 2 \notin X \inter Y^c$\\
+        $\begin{array}{|c|c|c|c|c|c|}
+            \hline
+            2 \en X     & 2 \en Y     & 2 \en Y^c   & 2 \en X^c   & 2 \notin X \inter Y^c & 2 \notin Y \inter X^c \\ \hline  \hline
+            \magenta{V} & \magenta{V} & \magenta{F} & \magenta{F} & \magenta{V}           & \magenta{V}           \\
+            \cyan{V}    & \cyan{F}    & \cyan{V}    & \cyan{F}    & \cyan{F}              & \cyan{V}              \\
+            \cyan{F}    & \cyan{V}    & \cyan{F}    & \cyan{V}    & \cyan{V}              & \cyan{F}              \\
+            \magenta{F} & \magenta{F} & \magenta{V} & \magenta{V} & \magenta{V}           & \magenta{V}           \\ \hline
+          \end{array}$.\\
+        \begin{enumerate}
+          \item[R:]
+                La relación es reflexiva ya que para que un elemento $X$ esté relacionado con sí mismo debe ocurrir
+                que $X \relacion X \sisolosi 2 \notin X \inter X^c$, es decir $2 \notin \vacio$, lo cual es siempre cierto.
 
-		      \item[S:]
-		            La relación no es simétrica. Se puede ver con la \cyan{segunda y tercera} fila de la tabla con un contraejemplo.
-		            $X = \set{1}$ y $Y = \set{2},\, X,Y \subseteq A$, $X \relacion Y$, pero $Y \norelacion X$,
+          \item[S:]
+                La relación no es simétrica. Se puede ver con la \cyan{segunda y tercera} fila de la tabla con un contraejemplo.
+                $X = \set{1}$ y $Y = \set{2},\, X,Y \subseteq A$, $X \relacion Y$, pero $Y \norelacion X$,
 
-		      \item[AS:]
-		            La relación no es antisimétrica. Se puede ver con la \magenta{primera o cuarta} fila tabla con un contraejempl
-		            con un contraejemplo. Si $X = \set{1,2}$ e $Y = \set{2,3} \entonces X \relacion Y$ y además $Y \relacion X$
-		            con  $X \distinto Y$.
+          \item[AS:]
+                La relación no es antisimétrica. Se puede ver con la \magenta{primera o cuarta} fila tabla con un contraejempl
+                con un contraejemplo. Si $X = \set{1,2}$ e $Y = \set{2,3} \entonces X \relacion Y$ y además $Y \relacion X$
+                con  $X \distinto Y$.
 
-		      \item[T:]
-		            Es transitiva. Si bien no es lo más fácil de explicar, se puede ver en la tabla que para tener 2 relaciones
-		            en una terna $X, Y, Z$ no se puede llegar nunca al caso de la segunda fila de la tabla, donde se lograría que
-		            $X \norelacion Z$
-	      \end{enumerate}
+          \item[T:]
+                Es transitiva. Si bien no es lo más fácil de explicar, se puede ver en la tabla que para tener 2 relaciones
+                en una terna $X, Y, Z$ no se puede llegar nunca al caso de la segunda fila de la tabla, donde se lograría que
+                $X \norelacion Z$
+        \end{enumerate}
 
-	\item $A = \naturales \times \naturales,\, \relacion$ definida por $(a,b) \relacion (c,d) \sisolosi bc$ es múltiplo de $ad$.
-	      \begin{enumerate}
-		      \item[R:] $(a,b) \relacion (a,b) \sisolosi ba = k\cdot ab$ con $k=1$, se concluye que sí es reflexiva.
-		      \item[S:]
-		            $ \llave{l}{
-				            (a,b) \relacion (c,d) \sisolosi bc \llamada{1}= k\cdot ad \\
-				            (c,d) \relacion (a,b) \sisolosi ad = h\cdot bc \llamada{1}= h\cdot k \cdot ad = k'ad
-			            }$.\\
-		            con  $k'=1$ se cumple la igualdad. La relación es simétrica.
-		      \item[AS:] Si tomo $(a, b) = (4, 2)$ y $(c,d) = (16, 4)$, tengo que
-		            $(a,b) \relacion (c,d)$ con $(a,b) \neq (c,d)$. Por lo tanto
-		            la relación no es antisimétrica.
-		      \item[T:]$
-			            \llave{l}{
-				            (a,b) \relacion (c,d) \sisolosi bc \llamada{1}= k\cdot ad \\
-				            (c,d) \relacion (e,f) \sisolosi de \llamada{1}= h\cdot cf \\
-				            \qvq (a,b) \relacion (e,f) \sisolosi \magenta{be = k'\cdot af}\\
-				            \flecha{multiplico}[M.A.M.]
-				            \llaves{l}
-				            {
-					            bc \llamada{1}= k\cdot ad \\
-					            de \llamada{1}= h\cdot cf
-				            } \flecha{y}[acomodo]
-				            be \cdot \cancel{cd} = k \cdot h \cdot af \cdot \cancel{cd} \to
-				            \magenta{be \igual{\Tilde} k' \cdot af}.
-			            }$\\
-		            Se concluye que la relación es transitiva.
-	      \end{enumerate}
-	      Con esos resultados se puede decir que $\relacion$ en $A$ es de \textit{equivalencia}.
+  \item $A = \naturales \times \naturales,\, \relacion$ definida por $(a,b) \relacion (c,d) \sisolosi bc$ es múltiplo de $ad$.
+        \begin{enumerate}
+          \item[R:] $(a,b) \relacion (a,b) \sisolosi ba = k\cdot ab$ con $k=1$, se concluye que sí es reflexiva.
+          \item[S:]
+                $ \llave{l}{
+                    (a,b) \relacion (c,d) \sisolosi bc \llamada{1}= k\cdot ad \\
+                    (c,d) \relacion (a,b) \sisolosi ad = h\cdot bc \llamada{1}= h\cdot k \cdot ad = k'ad
+                  }$.\\
+                con  $k'=1$ se cumple la igualdad. La relación es simétrica.
+          \item[AS:] Si tomo $(a, b) = (4, 2)$ y $(c,d) = (16, 4)$, tengo que
+                $(a,b) \relacion (c,d)$ con $(a,b) \neq (c,d)$. Por lo tanto
+                la relación no es antisimétrica.
+          \item[T:]$
+                  \llave{l}{
+                    (a,b) \relacion (c,d) \sisolosi bc \llamada{1}= k\cdot ad \\
+                    (c,d) \relacion (e,f) \sisolosi de \llamada{1}= h\cdot cf \\
+                    \qvq (a,b) \relacion (e,f) \sisolosi \magenta{be = k'\cdot af}\\
+                    \flecha{multiplico}[M.A.M.]
+                    \llaves{l}
+                    {
+                      bc \llamada{1}= k\cdot ad \\
+                      de \llamada{1}= h\cdot cf
+                    } \flecha{y}[acomodo]
+                    be \cdot \cancel{cd} = k \cdot h \cdot af \cdot \cancel{cd} \to
+                    \magenta{be \igual{\Tilde} k' \cdot af}.
+                  }$\\
+                Se concluye que la relación es transitiva.
+        \end{enumerate}
+        Con esos resultados se puede decir que $\relacion$ en $A$ es de \textit{equivalencia}.
 
 \end{enumerate}
