--- a/1-guia/ejercicios-1/ej-29-1.tex
+++ b/1-guia/ejercicios-1/ej-29-1.tex
@@ -1,20 +1,47 @@
-\ejercicio
-Determinar si $\relacion$ es una función de $A$ en $B$ en los casos
-\begin{enumerate}[label=\roman*)]
-	\item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,a),(4,b),(5,c),(3,d)} $\\
-	      No es función, dado que $3 \relacion a$, $3 \relacion d$ y $a \distinto d$
+\underline{\textit{Funciones}}\par
+Un poco de teoría:\par
+Sean $A$ y  $B$ conjuntos, y sea $\relacion$ de $A$ en $B$. Se dice que
+$\relacion$ es una \textit{función} cuando todo elemento $x \en A$ está relacionado con algún
+$y \en B$, y este elemento $y$ es único. Es decir:\par
 
-	\item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,d),(4,b)}$\\
-	      No es función, dado que todo elemnto de $A$ tiene que estar relacionado a algún elemento de $B,\, 5 \norelacion y$ para ninún $ y \en B$
+$\llave{l}{
+    \paratodo x \en A, \existe! y \en B \talque x \relacion y\par
+    \paratodo x \en A, \existe y \en B \talque x\relacion y, \par
+    \text{si } y, z \en B \text{ son tales que } x \relacion y \text{ y } x \relacion z \entonces y = z.
+  }
+$
+\begin{itemize}
+  \item Dada $f:A\,(dominio) \to B\,(codominio)$ el conjunto \textit{imagen} es: $\im(f)= \set{y \en B : \existe x \en A \talque f(x) = y}$
+  \item \begin{itemize}
+          \item \textit{inyectiva:} si $\forall x, x' \en A \text{ tales que } f(x) = f(x')$ se tiene que $ x = x'$
+          \item \textit{sobreyectiva:} si $\forall y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \im(f) = B$
+          \item \textit{biyectiva:} Cuando es inyectiva y sobreyectiva.
+        \end{itemize}
+  \item $A, B, C$ conjuntos y $f: A \to B \to C,\, g: B \to C$ funciones. Entonces la \textit{composición} de $f$ con $g$, que se nota:\par
+        $g \comp f = g\left(f(x)\right),\, \paratodo x \en A$, resulta ser una función de $A$ en $C$.
+  \item $f$ es biyectiva cuando: $f\inv : B \to A$ es la función que satisface que:\par
+        $\paratodo y \en B: f\inv(y) = x \sisolosi f(x) = y$
+\end{itemize}
 
-	\item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,d),(4,b),(5,c)} $\\
-	      Es función.
 
-	\item $A = \naturales,\, B = \reales, \, \relacion = \set{(a,b) \en \naturales \times \reales \talque a = 2b - 3} $\\
-	      Es función.
+\begin{enunciado}{\ejercicio}
+  Determinar si $\relacion$ es una función de $A$ en $B$ en los casos
+\end{enunciado}
+  \begin{enumerate}[label=\roman*)]
+    \item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,a),(4,b),(5,c),(3,d)} $\par
+          No es función, dado que $3 \relacion a$, $3 \relacion d$ y $a \distinto d$
 
-	\item $A = \reales,\, B = \naturales, \, \relacion = \set{(a,b) \en \reales \times \naturales \talque a = 2b - 3} $\\
-	      No es función, $\sqrt{2} \norelacion b$ para ningún $b \en \naturales$
-	\item $A = \enteros,\, B = \enteros, \, \relacion = \set{(a,b) \en \enteros \times \enteros \talque a +b \text{ es divisible por }5} $\\
-	      No es función, porque $0 \relacion 5$ y $0 \relacion 10$ y necesito que $\paratodo x \en \enteros,\, \existe!\, y \en \enteros$
-\end{enumerate}
+    \item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,d),(4,b)}$\par
+          No es función, dado que todo elemnto de $A$ tiene que estar relacionado a algún elemento de $B,\, 5 \norelacion y$ para ninún $ y \en B$
+
+    \item $A = \set{1,2,3,4,5},\, B = \set{a,b,c,d},\, \relacion = \set{(1,a), (2,a),(3,d),(4,b),(5,c)} $\par
+          Es función.
+
+    \item $A = \naturales,\, B = \reales, \, \relacion = \set{(a,b) \en \naturales \times \reales \talque a = 2b - 3} $\par
+          Es función.
+
+    \item $A = \reales,\, B = \naturales, \, \relacion = \set{(a,b) \en \reales \times \naturales \talque a = 2b - 3} $\par
+          No es función, $\sqrt{2} \norelacion b$ para ningún $b \en \naturales$
+    \item $A = \enteros,\, B = \enteros, \, \relacion = \set{(a,b) \en \enteros \times \enteros \talque a +b \text{ es divisible por }5} $\par
+          No es función, porque $0 \relacion 5$ y $0 \relacion 10$ y necesito que $\paratodo x \en \enteros,\, \existe!\, y \en \enteros$
+  \end{enumerate}
