--- a/1-guia/ejercicios-1/ej-7-1.tex
+++ b/1-guia/ejercicios-1/ej-7-1.tex
@@ -1,10 +1,30 @@
-\ejercicio
-$\flecha{del}[gráfico] (C \inter B) - A) \union (A - B) =\\
-	\flecha{uso que}[$A - B = A \inter B^c$] = (C \inter B \inter A^c) \union (A \inter B^c) \igual{\blue{*}}\\
-	\flecha{distributiva} C \union (A \inter B^c) \inter B \union (A \inter B^c) \inter A^c \union (A \inter B^c) =\\
-	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter (B \union B^c) \inter (A^c \union A) \inter (A^c \union B^c)=\\
-	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter \universo \inter \universo \inter (A^c \union B^c)=\\
-	= (C \union A) \inter (C \union B^c) \inter (B \union A) \inter (A^c \union B^c)=\\
-	= C \inter C \union C \inter B^c \union A\inter C \union A \inter B^c ... \\
-	= C \union C \inter B^c \union A\inter C \union A \inter B^c \\
-$
+\begin{enunciado}{\ejercicio}
+        Encontrar fórmulas que describen las partes rayadas de los siguientes diagramas de Venn, utilizando
+        únicamente intersecciones, uniones y complementos.
+
+\begin{multicols}{3}
+  \begin{enumerate}[label=\roman*)]
+    \item
+          \begin{venndiagram3sets}[shade=gray!20!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
+            \fillOnlyA
+            \fillBCapCNotA
+            \fillACapCNotB
+          \end{venndiagram3sets}
+
+    \item
+          \begin{venndiagram3sets}[shade=gray!20!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
+            \fillOnlyA
+            \fillOnlyC
+          \end{venndiagram3sets}
+
+    \item
+          \begin{venndiagram3sets}[shade=gray!20!white, showframe = false,hgap=0, vgap=0, overlap = 1.1cm]
+\fillACapBNotC
+\fillACapCNotB
+\fillCCapBNotA
+          \end{venndiagram3sets}
+  \end{enumerate}
+\end{multicols}
+\end{enunciado}
+
+\hacer
